--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,73 +1,45 @@
 ---
-import { Icon } from "astro-iconify";
-
-import {
-	Astronav,
-	MenuItems,
-	MenuIcon,
-	Dropdown,
-	DropdownItems,
-	DropdownSubmenu,
-} from "astro-navbar";
-import ThemeIcon from "./ThemeIcon.astro";
+import { buttonVariants } from '../components/ui/button'
+import { ModeToggle } from '../components/ui/ThemeToggle'
 ---
 
+<script is:inline>
+  document.addEventListener('astro:after-swap', function () {
+    if (localStorage.getItem('theme') === 'dark')
+      document.documentElement.classList.toggle('dark', true)
+  })
+
+  const getThemePreference = () => {
+    return localStorage.getItem('theme')
+  }
+
+  const isDark = getThemePreference() === 'dark'
+  document.documentElement.classList[isDark ? 'add' : 'remove']('dark')
+</script>
+
 <header
-	class="lg:flex py-4 pt-2 px-4 sm:px-6 xl:px-0 md:pt-10 gap-5 mb-10 lg:mb-28 w-full"
+  class="sticky top-0 z-50 w-full border-b bg-background/95 backdrop-blur supports-[backdrop-filter]:bg-background/60"
 >
-	<Astronav>
-		<div
-			class="flex w-full justify-between items-end border-b lg:border-none pb-4 lg:pb-0"
-		>
-			<a class="font-semibold text-xl flex gap-2 items-center group" href="/"
-				><Icon
-					name="radix-icons:crumpled-paper"
-					class="w-5 h-5 group-hover:rotate-[17deg]"
-				/>Home</a
-			>
-			<div class="lg:hidden flex items-center justify-center gap-4">
-				<MenuIcon class="w-4 h-4 text-gray-800 dark:text-neutral-300" />
-				<ThemeIcon class="w-10" />
-			</div>
-		</div>
-		<MenuItems class="hidden lg:flex">
-			<ul
-				class="flex flex-col lg:flex-row lg:gap-5 gap-3 mt-3 lg:mt-0 pb-4 lg:pb-0 border-b border-neutral-400 lg:border-b-0"
-			>
-				<li class="flex items-center"><a href="/about">About</a></li>
-				<li class="flex items-center"><a href="/projects">Projects</a></li>
-				<li class="flex items-center"><a href="/blog">Blog</a></li>
-				<li class="flex items-center"><a href="/tags">Tags</a></li>
-				<ThemeIcon class="w-10 hidden lg:flex" />
-				<!-- <li>
-			<Dropdown class="group">
-			  <button class="flex items-center">
-				<span> Services </span>
-				<svg
-				  xmlns="http://www.w3.org/2000/svg"
-				  fill="none"
-				  viewBox="0 0 24 24"
-				  stroke-width="3"
-				  stroke="currentColor"
-				  class="w-3 h-3 mt-0.5 group-open:rotate-180">
-				  <path
-					stroke-linecap="round"
-					stroke-linejoin="round"
-					d="M19.5 8.25l-7.5 7.5-7.5-7.5"></path>
-				</svg>
-			  </button>
-			  <DropdownItems class="relative">
-				<div class="absolute top-0">
-				  <ul>
-					<li>Menu 1</li>
-					<li>Menu 2</li>
-					<li>Menu 3</li>
-				  </ul>
-				</div>
-			  </DropdownItems>
-			</Dropdown>
-		  </li> -->
-			</ul>
-		</MenuItems>
-	</Astronav>
+  <div
+    class="container flex h-16 items-center space-x-4 sm:justify-between sm:space-x-0"
+  >
+    <div class="flex gap-6 md:gap-10">
+      <a href="/" class="flex items-center space-x-2">
+        <span class="inline-block font-bold">Bue221</span>
+      </a>
+    </div>
+    <div class="flex flex-1 items-center justify-end space-x-4">
+      <nav class="flex items-center space-x-1">
+        <a
+          href="https://github.com/bue221"
+          target="_blank"
+          rel="noreferrer"
+          class={buttonVariants({ variant: 'ghost' })}
+        >
+          GitHub
+        </a>
+        <ModeToggle transition:persist client:load />
+      </nav>
+    </div>
+  </div>
 </header>
